--- a/updates.html
+++ b/updates.html
@@ -18,8 +18,8 @@
 
     <script>
         const supabaseClient = supabase.createClient(
-            window.SUPABASE_URL || '{{SUPABASE_URL}}',
-            window.SUPABASE_ANON_KEY || '{{SUPABASE_ANON_KEY}}'
+            window.SUPABASE_URL,
+            window.SUPABASE_ANON_KEY
         );
 
         const params = new URLSearchParams(window.location.search);
