--- a/support/index.html
+++ b/support/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CiwAI Smart Digital — Support</title>
-  <meta name="description" content="Official Help Center for CiwAI Smart Digital: FAQ, guides, and support form for AllNetTools, GarageCars, and WaaAI Tools.">
+  <meta name="description"
+    content="Official Help Center for CiwAI Smart Digital: FAQ, guides, and support form for AllNetTools, GarageCars, and WaaAI Tools.">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="/favicon.ico">
@@ -12,6 +14,11 @@
   <meta property="og:description" content="Need help? Reach our team.">
   <meta property="og:url" content="https://ciwaidevtools.netlify.app/support">
   <meta property="og:type" content="website">
+
+  <script src="/assets/env.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -29,6 +36,7 @@
   }
   </script>
 </head>
+
 <body class="bg-slate-50 text-slate-800">
   <!-- Header -->
   <header class="bg-white border-b border-slate-200 sticky top-0 z-20">
@@ -53,7 +61,8 @@
     <div class="max-w-6xl mx-auto px-4 sm:px-6 py-14">
       <div class="max-w-3xl">
         <h2 class="text-3xl sm:text-4xl font-bold tracking-tight">CiwAI Help Center</h2>
-        <p class="mt-3 text-slate-300">Need help with AllNetTools, GarageCars, or WaaAI Tools? Check the FAQ below or send us a message.</p>
+        <p class="mt-3 text-slate-300">Need help with AllNetTools, GarageCars, or WaaAI Tools? Check the FAQ below or
+          send us a message.</p>
       </div>
     </div>
   </section>
@@ -85,7 +94,8 @@
               <span class="text-slate-400 group-open:rotate-180 transition">&#9662;</span>
             </summary>
             <div class="mt-3 text-sm text-slate-600">
-              Use the support form or email <span class="font-mono">support@ciwai.dev</span> (optional placeholder — adjust if needed).
+              Use the support form or email <span class="font-mono">support@ciwai.dev</span> (optional placeholder —
+              adjust if needed).
             </div>
           </details>
 
@@ -105,12 +115,50 @@
               <span class="text-slate-400 group-open:rotate-180 transition">&#9662;</span>
             </summary>
             <div class="mt-3 text-sm text-slate-600">
-              Website: <a class="underline" href="/">ciwaidevtools.netlify.app</a>.  
+              Website: <a class="underline" href="/">ciwaidevtools.netlify.app</a>.
               All WaaAI Tools & WooOI announcements will appear here.
             </div>
           </details>
         </div>
       </div>
+      <section id="support-articles" class="py-12 bg-gray-50">
+        <div class="max-w-4xl mx-auto px-4">
+          <h2 class="text-2xl font-bold mb-6">Help Articles</h2>
+          <div id="support-list" class="space-y-4"></div>
+        </div>
+      </section>
+
+      <script>
+        const supabaseClient = supabase.createClient(
+          window.SUPABASE_URL || '{{SUPABASE_URL}}',
+          window.SUPABASE_ANON_KEY || '{{SUPABASE_ANON_KEY}}'
+        );
+
+        async function loadSupportArticles() {
+          const { data, error } = await supabaseClient
+            .from('support_articles')
+            .select('title, slug, excerpt, category, published_at')
+            .eq('status', 'published')
+            .lte('published_at', new Date().toISOString())
+            .order('published_at', { ascending: false });
+
+          if (error) {
+            console.error(error);
+            return;
+          }
+
+          const container = document.getElementById('support-list');
+          container.innerHTML = data.map(a => `
+          <div class="bg-white p-4 rounded shadow">
+            <h3 class="font-semibold text-lg">${a.title}</h3>
+            <p class="text-sm text-gray-500 mb-2">${a.category} – ${new Date(a.published_at).toLocaleDateString()}</p>
+            <p class="mb-2">${a.excerpt || ''}</p>
+          </div>
+        `).join('');
+        }
+
+        loadSupportArticles();
+      </script>
     </section>
 
     <!-- Support Card -->
@@ -129,11 +177,13 @@
             </p>
             <div>
               <label class="block text-sm mb-1">Name</label>
-              <input name="name" required class="w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" />
+              <input name="name" required
+                class="w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" />
             </div>
             <div>
               <label class="block text-sm mb-1">Email</label>
-              <input type="email" name="email" required class="w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" />
+              <input type="email" name="email" required
+                class="w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" />
             </div>
             <div>
               <label class="block text-sm mb-1">App</label>
@@ -145,9 +195,11 @@
             </div>
             <div>
               <label class="block text-sm mb-1">Message</label>
-              <textarea name="message" rows="4" required class="w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500"></textarea>
+              <textarea name="message" rows="4" required
+                class="w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500"></textarea>
             </div>
-            <button class="w-full rounded-xl bg-slate-900 text-white py-2.5 font-medium hover:bg-slate-800">Send</button>
+            <button
+              class="w-full rounded-xl bg-slate-900 text-white py-2.5 font-medium hover:bg-slate-800">Send</button>
             <p class="text-xs text-slate-500">By submitting this form, you agree to our privacy policy.</p>
           </form>
         </div>
@@ -165,10 +217,12 @@
 
   <!-- Footer -->
   <footer class="border-t border-slate-200">
-    <div class="max-w-6xl mx-auto px-4 sm:px-6 py-8 text-sm text-slate-500 flex flex-col sm:flex-row gap-2 sm:items-center sm:justify-between">
+    <div
+      class="max-w-6xl mx-auto px-4 sm:px-6 py-8 text-sm text-slate-500 flex flex-col sm:flex-row gap-2 sm:items-center sm:justify-between">
       <p>© <span id="y"></span> CiwAI Smart Digital — WaaAI Tools • WooOI</p>
     </div>
   </footer>
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
+
 </html>
