--- a/support/article.html
+++ b/support/article.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <title>Support Article</title>
-    <div class="mb-4 text-sm">
-        <a href="/support" class="text-blue-600 hover:underline">Support</a>
-        <span class="mx-1 text-gray-400">/</span>
-        <span>${data.title}</span>
-    </div>
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Support Article - CiwAI Smart Digital</title>
+
+    <!-- Styles -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/style.css"> <!-- kalau ada style custom -->
+
+    <!-- Scripts -->
     <script src="/assets/env.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body class="bg-gray-50">
-    <main class="max-w-3xl mx-auto py-10 px-4" id="article"></main>
 
+    <!-- ======= Header sama seperti /support ======= -->
     <header class="bg-gray-900 text-white">
         <div class="max-w-6xl mx-auto px-4 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-3">
@@ -38,27 +37,48 @@
         </div>
     </header>
 
-    <script>
-        const s = supabase.createClient(window.SUPABASE_URL, window.SUPABASE_ANON_KEY);
-        const q = new URLSearchParams(location.search);
-        const slug = q.get('slug');
+    <!-- ======= Content ======= -->
+    <main class="max-w-4xl mx-auto py-10 px-4" id="article-content">
+        <p class="text-gray-500">Loading article...</p>
+    </main>
 
-        async function load() {
-            if (!slug) { document.getElementById('article').innerHTML = '<p>Article not found.</p>'; return; }
-            const { data, error } = await s.from('support_articles')
-                .select('*').eq('slug', slug).eq('status', 'published').single();
-            if (error || !data) { document.getElementById('article').innerHTML = '<p>Article not found.</p>'; return; }
-            document.title = `${data.title} – Support`;
-            document.getElementById('article').innerHTML = `
+    <!-- ======= Script ======= -->
+    <script>
+        const supabaseClient = supabase.createClient(window.SUPABASE_URL, window.SUPABASE_ANON_KEY);
+        const params = new URLSearchParams(window.location.search);
+        const slug = params.get('slug');
+
+        async function loadArticle() {
+            if (!slug) {
+                document.getElementById('article-content').innerHTML = `<p class="text-red-500">No article specified.</p>`;
+                return;
+            }
+
+            const { data, error } = await supabaseClient
+                .from('support_articles')
+                .select('*')
+                .eq('slug', slug)
+                .eq('status', 'published')
+                .single();
+
+            if (error || !data) {
+                document.getElementById('article-content').innerHTML = `<p class="text-red-500">Article not found.</p>`;
+                return;
+            }
+
+            document.title = `${data.title} - CiwAI Support`;
+            document.getElementById('article-content').innerHTML = `
         <h1 class="text-3xl font-bold mb-2">${data.title}</h1>
         <p class="text-sm text-gray-500 mb-6">${data.category} • ${new Date(data.published_at).toLocaleDateString()}</p>
-        ${data.cover_url ? `<img src="${data.cover_url}" class="rounded mb-6" />` : ''}
+        ${data.cover_url ? `<img src="${data.cover_url}" class="rounded mb-6"/>` : ''}
         <article class="prose max-w-none">${marked.parse(data.content_md)}</article>
-        <div class="mt-8"><a href="/support/" class="text-blue-600">← Back to Support</a></div>
+        <div class="mt-8"><a href="/support" class="text-blue-600 hover:underline">← Back to Support</a></div>
       `;
         }
-        load();
+
+        loadArticle();
     </script>
+
 </body>
 
 </html>
