--- a/index.html
+++ b/index.html
@@ -56,17 +56,30 @@
     </p>
 
     <!-- CTA Buttons -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 max-w-xl mx-auto mt-6">
-      </a>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 max-w-4xl mx-auto mt-6">
+
       <a href="#projects"
         class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition text-center">
         Explore Project
       </a>
+
       <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
         class="px-6 py-3 bg-rose-400 text-white rounded-xl shadow-md hover:bg-rose-500 transition text-center">
         Play Store
       </a>
+
+      <a href="/support"
+        class="px-6 py-3 bg-green-500 text-white rounded-xl shadow-md hover:bg-green-600 transition text-center">
+        Support
+      </a>
+
+      <a href="/updates.html"
+        class="px-6 py-3 bg-yellow-500 text-white rounded-xl shadow-md hover:bg-yellow-600 transition text-center">
+        Updates
+      </a>
+
     </div>
+
   </section>
 
   <!-- About Us -->
