--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             to access.
           </p>
           <a href="https://jannatulaulad.netlify.app/" target="_blank"
-            class="inline-block bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition text-sm">
-            🌐 Lihat Website
+            class="inline-block bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-400 transition text-sm">
+            🌐 Check Website
           </a>
         </div>
 
