--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CiwAI™ Smart Digital</title>
-  <link rel="icon" type="image/png" href="favicon.png" />
-  <meta name="description" content="CiwAI™ Smart Digital - Modern Solutions: Apps, Web, VPS/VPN, AI Bots" />
+  <title>CiwAI™ Smart Digital — Apps, Web, VPS/VPN, AI Bots</title>
+  <meta name="description"
+    content="CiwAI™ Smart Digital - Smart, Lightweight, Human-Friendly Technology: Mobile Apps, Web Design, VPS/VPN, AI Bots." />
+  <link rel="canonical" href="https://ciwaidevtools.netlify.app/" />
+  <link rel="icon" type="image/webp" href="assets/images/favicon.webp" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="CiwAI™ Smart Digital — Apps, Web, VPS/VPN, AI Bots" />
+  <meta property="og:description"
+    content="Smart, Lightweight, Human-Friendly Technology for everyone. Explore our Apps, Websites, VPS/VPN, and AI Bots." />
+  <meta property="og:image" content="https://ciwaidevtools.netlify.app/assets/images/logo_ai.webp" />
+  <meta property="og:url" content="https://ciwaidevtools.netlify.app/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="CiwAI™ Smart Digital — Apps, Web, VPS/VPN, AI Bots" />
+  <meta name="twitter:description"
+    content="Smart, Lightweight, Human-Friendly Technology for everyone. Explore our Apps, Websites, VPS/VPN, and AI Bots." />
+  <meta name="twitter:image" content="https://ciwaidevtools.netlify.app/assets/images/logo_ai.webp" />
 
   <script src="/assets/env.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -24,12 +41,8 @@
       scroll-behavior: smooth;
     }
   </style>
-  <!-- Supabase JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <!-- Markdown Renderer -->
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
 </head>
+
 
 <body class="flex flex-col min-h-screen bg-gradient-to-b from-sky-50 via-white to-white text-gray-900 font-sans">
 
@@ -44,41 +57,44 @@
 
   <!-- Hero Section -->
   <section id="home" class="pt-24 pb-32 flex flex-col justify-center items-center text-center px-6">
-    <img src="logo_ai.png" alt="WaaAi Logo" class="w-52 md:w-64 lg:w-72 mb-6 drop-shadow-xl animate-fade-in"
-      data-aos="fade-down" />
+    <img src="assets/Images/logo_ai.webp" alt="WaaAi Logo"
+      class="w-52 md:w-64 lg:w-72 mb-0 drop-shadow-xl animate-fade-in" data-aos="fade-down" />
 
     <h1 class="text-4xl md:text-6xl font-bold mb-4 text-center max-w-2xl mx-auto" data-aos="fade-up">
       CiwAI™ Smart Digital
     </h1>
 
     <p class="text-lg md:text-xl max-w-xl mb-6 text-gray-600" data-aos="fade-up" data-aos-delay="100">
-      Simplifying modern technology for everyone — Mobile Apps, Web Design, VPS/VPN, and AI Chatbots.
+      Smart, Lightweight, and Human-Friendly Tech — Mobile Apps, Web Design, VPS/VPN, and AI Chatbots.
     </p>
+
 
     <!-- CTA Buttons -->
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 max-w-4xl mx-auto mt-6">
 
       <a href="#projects"
         class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition text-center">
-        Explore Project
+        Explore Projects
       </a>
 
       <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
+        rel="noopener noreferrer"
         class="px-6 py-3 bg-rose-400 text-white rounded-xl shadow-md hover:bg-rose-500 transition text-center">
         Play Store
       </a>
 
-      <a href="/support"
+      <a href="/support" target="_blank" rel="noopener noreferrer"
         class="px-6 py-3 bg-green-500 text-white rounded-xl shadow-md hover:bg-green-600 transition text-center">
         Support
       </a>
 
-      <a href="/updates.html"
+      <a href="/updates.html" target="_blank" rel="noopener noreferrer"
         class="px-6 py-3 bg-yellow-500 text-white rounded-xl shadow-md hover:bg-yellow-600 transition text-center">
         Updates
       </a>
 
     </div>
+
 
   </section>
 
@@ -148,8 +164,9 @@
             Traceroute, Speed Test, and more.
           </p>
           <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa"
-            class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-400 transition text-sm">
-            📥 Download APK
+            class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-400 transition text-sm"
+            target="_blank" rel="noopener noreferrer">
+            📥 Download APK (Direct)
           </a>
         </div>
 
@@ -160,8 +177,9 @@
             powerful, and ready to scale.
           </p>
           <a href="https://drive.google.com/uc?export=download&id=1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-"
-            class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-400 transition text-sm">
-            📥 Download APK
+            class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-400 transition text-sm"
+            target="_blank" rel="noopener noreferrer">
+            📥 Download APK (Direct)
           </a>
         </div>
 
@@ -172,7 +190,7 @@
             to access.
           </p>
           <a href="https://jannatulaulad.netlify.app/" target="_blank"
-            class="inline-block bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-400 transition text-sm">
+            class="inline-block bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition text-sm">
             🌐 Check Website
           </a>
         </div>
@@ -238,10 +256,16 @@
       </div>
   </section>
 
-    <!-- Footer -->
   <footer class="mt-auto py-4 bg-gradient-to-tr from-gray-800 to-gray-900 text-white text-xs text-center">
-    <p class="text-sm">&copy; 2025 CiwAI™ Smart Digital. All rights reserved.</p>
+    <p class="text-sm mb-2">&copy; 2025 CiwAI™ Smart Digital. All rights reserved.</p>
+    <div class="space-x-4">
+      <a href="https://github.com/Ciwai-lab" target="_blank" rel="noopener noreferrer"
+        class="hover:underline">GitHub</a>
+      <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" class="hover:underline">LinkedIn</a>
+      <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer" class="hover:underline">Instagram</a>
+    </div>
   </footer>
+
 
 
   <!-- Floating WhatsApp Button -->
