--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
   <!-- Animate on Scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
+  <!-- Schema.org: Organization (CiwAI Smart Digital) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CiwAI™ Smart Digital",
+    "url": "https://ciwaidevtools.netlify.app/",
+    "logo": "https://ciwaidevtools.netlify.app/assets/images/logo_ciwai_512.webp",
+    "sameAs": [
+      "https://github.com/Ciwai-lab",
+      "https://instagram.com/",
+      "https://www.linkedin.com/"
+    ],
+    "contactPoint": [{
+      "@type": "ContactPoint",
+      "email": "ciwaismartdigital@gmail.com",
+      "contactType": "customer support",
+      "availableLanguage": ["English", "Indonesian"]
+    }]
+  }
+  </script>
+
   <!-- Smooth Scroll -->
   <style>
     html {
